<?xml version="1.0"?>
<package>
  <name>hfts_grasp_planner</name>
  <version>0.1.0</version>
  <description>The hfts_grasp_planner package</description>
  <maintainer email="haustein@kth.se">Joshua Haustein</maintainer>
  <maintainer email="kaiyuh@kth.se">Kaiyu Hang</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/kth-ros-pkg/hfts_grasp_planner</url>
  <author email="kaiyuh@kth.se">Kaiyu Hang</author>
  <author email="haustein@kth.se">Joshua Haustein</author>
  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>dynamic-reconfigure</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend>python-yaml</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>python-sklearn</run_depend>
  <run_depend>python-scipy</run_depend>
  <run_depend>python-igraph</run_depend>
  <run_depend>python-numpy-stl-pip</run_depend>
  <run_depend>python-matplotlib</run_depend>
  <run_depend>Rtree</run_depend>
  <run_depend>openravepy</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
